// abstract class BaseDBModel {
//   int get id;
//   Map<String, dynamic> toMap();
// }
